# agent-evals

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
agent_evals/: __init__.py  evaluator.py  guards.py  metrics.py
benchmarks/: README.md  benchmark_evaluator.py
docs/: index.md
docs/api/: eval_case.md  eval_report.md  evaluator.md
examples/: basic_eval.py
tests/: test_evaluator.py
