[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-evals"
version = "0.1.0"
description = "Production-grade LLM agent evaluation framework"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Darshankumar Joshi", email = "darshjme@gmail.com" }]
keywords = ["llm", "agents", "evaluation", "testing", "ai", "openai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "openai>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]
anthropic = ["anthropic>=0.25"]
bedrock = ["boto3>=1.34"]

[project.urls]
Homepage = "https://github.com/darshjme/agent-evals"
Repository = "https://github.com/darshjme/agent-evals"
Issues = "https://github.com/darshjme/agent-evals/issues"

[tool.hatch.build.targets.wheel]
packages = ["agent_evals"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
