[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-evals"
version = "0.1.0"
description = "Production-grade evaluation framework for LLM agents — task completion, reasoning quality, and tool use accuracy"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Darshankumar Joshi", email = "darshjme@gmail.com"}]
keywords = ["llm", "agents", "evaluation", "testing", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://github.com/darshjme/agent-evals"
Repository = "https://github.com/darshjme/agent-evals"
Issues = "https://github.com/darshjme/agent-evals/issues"

[tool.hatch.build.targets.wheel]
packages = ["agent_evals"]
